<resources>
    <string name="login_btn_login">Login</string>
    <string name="login_logo">Logo</string>

    <string name="app_name">DummyNotepad</string>
    <string name="my_notes_title">My Notes</string>
    <string name="list_notes_btn_new_note">New Note</string>
    <string name="list_notes">List Notes</string>
    <string name="read_note">Read Note</string>
    <string name="new_note">New Note</string>
    <string name="insert_note_hint_insert_title">Insert Title</string>
    <string name="new_note_hint_insert_note">Insert Note</string>
    <string name="new_note_btn_ok">Ok</string>
    <string name="new_note_btn_cancel">Cancel</string>
    <string name="read_note_title">Note Title</string>
    <string name="read_note_text">Note text</string>
    <string name="read_note_btn_done">Done</string>
    <string name="claim_description_menu_btn">Menu</string>
    <string name="claim_description_back_btn">Back</string>
    <string name="insure_logo">insure_logo</string>
    <string name="claim_description_title">Claim_title</string>
    <string name="claim_description_id">Claim_ID</string>
    <string name="claim_description_date">Claim_date</string>
    <string name="claim_title_description">Claim_description</string>
    <string name="claim_description_text">Claim_description_text : View here the information about your claim</string>
    <string name="claim_dscp_description">Description</string>
    <string name="home_page_menu_title">MENU</string>
    <string name="home_page_my_profile_btn">My Profile</string>
    <string name="home_page_claim_history_btn">My Claims</string>
    <string name="home_page_new_claim_btn">New Claim</string>
    <string name="home_page_settings_btn">Settings</string>
    <string name="home_page_help_btn">Help?</string>
    <string name= "login_act_user_text">User</string>
    <string name= "login_act_pass_text">Password</string>
    <string name= "login_act_email_input"></string>
    <string name= "login_act_pass_input"></string>
    <string name= "new_claim_page_title">New Claim</string>
    <string name= "new_claim_plate_input">Plate nº:</string>
    <string name= "new_claim_date_input">Date:</string>
    <string name= "new_claim_desciption_title">Description:</string>
    <string name= "new_claim_desciption_input">Insert the description of your claim here</string>
    <string name= "new_claim_btn_cancel">Cancel</string>
    <string name= "new_claim_btn_submit">Submit</string>
    <string name= "textView_settings">Settings</string>
    <string name= "settings_logout_btn">Logout</string>
    <string name= "settings_act_btn_menu">Menu</string>
    <string name= "failed_login_try_again">Try again</string>

    <string name= "wrong_id_input">Sorry but your login information is not valid.
    Please try again!</string>

</resources>

