<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ulisboa.tecnico.sise.lab03.dummynotepad.App.Activities.NewNoteActivity"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:weightSum="1">

        <EditText
            android:id="@+id/new_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/insert_note_hint_insert_title" />

        <EditText
            android:id="@+id/new_note_descr"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:inputType="textMultiLine"
            android:hint="@string/new_note_hint_insert_note"
            android:gravity="bottom" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            >

            <Button
                android:id="@+id/new_note_btn_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/new_note_btn_ok"
                android:layout_weight="0.5"
                style="?android:attr/buttonBarButtonStyle"
                />

            <Button
                android:id="@+id/new_note_btn_cncl"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/new_note_btn_cancel" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>