<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ulisboa.tecnico.sise.lab03.dummynotepad.App.Activities.ReadNoteActivity"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:id="@+id/read_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_note_title"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingVertical="@dimen/activity_vertical_margin"
            android:gravity="center" />

        <TextView
            android:id="@+id/read_note_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/read_note_text"
            android:layout_weight="0.98"
            android:paddingVertical="@dimen/activity_vertical_margin"
            />

        <Button
            android:text="@string/read_note_btn_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/read_note_btn_done"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>